# erocks

./: Makefile.am  ProjectHome.md  configure.in
data/: default.edc  erocks.desktop  erocks.sqlite  playerview.edc
src/: album.vala  artist.vala  db.vala  fso.vala  main.vala  player.vala  song.vala  ui.vala
