AC_INIT(erocks, 0.0.1, pespin.shar@gmail.com)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.in)

AM_INIT_AUTOMAKE(1.11 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST

AM_PROG_VALAC ([0.8.1])

EROCKS_PACKAGES="--pkg gio-2.0 --pkg gstreamer-0.10 --pkg eina --pkg evas --pkg ecore --pkg elm"

PKG_CHECK_MODULES(EROCKS,	glib-2.0 >= 2.25.0
							gobject-2.0
							gio-2.0
							gstreamer-0.10
							elementary
							eina)

AC_SUBST(EROCKS_LIBS)
AC_SUBST(EROCKS_CFLAGS)
AC_SUBST(EROCKS_PACKAGES)


EROCKS_VALAFLAGS=""



AC_ARG_ENABLE([fso],
   [AC_HELP_STRING([--enable-fso], [enable FSO support])],
   [
    if test "x${enableval}" = "xyes" ; then
       enable_fso="yes"
    else
       enable_fso="no"
    fi
   ],
   [enable_fso="no"])


EROCKS_VALAFLAGS=""
if test "x$enable_fso" = "xyes" ; then
	echo "ADDING FSO SUPPORT FOR THIS BUILD..."
   EROCKS_VALAFLAGS="--define=_FSO_"
fi
AC_SUBST(EROCKS_VALAFLAGS)

AC_OUTPUT(Makefile)
